--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "5.3.0",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
